--- a/Board-v2/src/main/resources/templates/login/loginForm.html
+++ b/Board-v2/src/main/resources/templates/login/loginForm.html
@@ -45,7 +45,9 @@
                 <input type="checkbox" value="remember-me"> Remember me
             </label>
         </div>
-        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+        <button class="w-100 btn btn-lg btn-primary" type="submit"
+                onclick="location.href='loginHome.html'"
+                th:onclick="|location.href='@{/loginHome}'|">Sign in</button>
         <p class="mt-5 mb-3 text-muted">&copy; 게시판 Ver.2</p>
 
     </form>
