--- a/Board-v2/src/main/resources/templates/login/loginForm.html
+++ b/Board-v2/src/main/resources/templates/login/loginForm.html
@@ -26,34 +26,29 @@
 </head>
 
 <body class="text-center">
+    <main class="form-signin">
+        <form action="/sign-in" method="post">
 
-<main class="form-signin">
-    <form action="/sign-in" method="post">
-        <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+            <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+            <div class="form-floating">
+                <input type="text" class="form-control" id="loginEmail" name="loginEmail" placeholder="name@example.com">
+                <label for="loginEmail">Email address</label>
+            </div>
 
-        <div class="form-floating">
-            <input type="text" class="form-control" id="loginEmail" name="loginEmail" placeholder="name@example.com">
-            <label for="loginEmail">Email address</label>
-        </div>
-        <div class="form-floating">
-            <input type="password" class="form-control" id="loginPw" name="loginPw" placeholder="Password">
-            <label for="loginPw">Password</label>
-        </div>
+            <div class="form-floating">
+                <input type="password" class="form-control" id="loginPw" name="loginPw" placeholder="Password">
+                <label for="loginPw">Password</label>
+            </div>
 
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" value="remember-me"> Remember me
-            </label>
-        </div>
-        <button class="w-100 btn btn-lg btn-primary" type="submit"
-                onclick="location.href='loginHome.html'"
-                th:onclick="|location.href='@{/loginHome}'|">Sign in</button>
-        <p class="mt-5 mb-3 text-muted">&copy; 게시판 Ver.2</p>
+            <div class="checkbox mb-3">
+                <label>
+                    <input type="checkbox" value="remember-me"> Remember me
+                </label>
+            </div>
 
-    </form>
-</main>
-
-
-
+            <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+            <p class="mt-5 mb-3 text-muted">&copy; 게시판 Ver.2</p>
+        </form>
+    </main>
 </body>
 </html>
