--- a/Board-v2/src/main/resources/templates/home.html
+++ b/Board-v2/src/main/resources/templates/home.html
@@ -51,6 +51,14 @@
                 <h2>게시물 목록</h2>
             </div>
 
+            <div class="row">
+                <div class="col">
+                    <button class="btn btn-primary float-end"
+                            th:onclick="|location.href='@{/post/addPost}'|"
+                            type="button">게시물 등록</button>
+                </div>
+            </div>
+
             <hr class="my-4">
             <div>
                 <table class="table">
