--- a/Board-v2/src/main/resources/templates/home.html
+++ b/Board-v2/src/main/resources/templates/home.html
@@ -54,7 +54,7 @@
             <div class="row">
                 <div class="col">
                     <button class="btn btn-primary float-end"
-                            th:onclick="|location.href='@{/post/addPost}'|"
+                            th:onclick="|location.href='@{/posts/new}'|"
                             type="button">게시물 등록</button>
                 </div>
             </div>
