--- a/Board-v2/src/main/resources/templates/post/editPost.html
+++ b/Board-v2/src/main/resources/templates/post/editPost.html
@@ -1,67 +1,54 @@
-<!--<!DOCTYPE HTML>-->
-<!--<html xmlns:th="http://www.thymeleaf.org">-->
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
 
-<!--<head>-->
-<!--    <meta charset="utf-8">-->
-<!--    <link th:href="@{/css/bootstrap.min.css}"-->
-<!--          href="../css/bootstrap.min.css" rel="stylesheet">-->
+<head>
+    <meta charset="utf-8">
+    <link th:href="@{/css/bootstrap.min.css}"
+          href="../css/bootstrap.min.css" rel="stylesheet">
 
-<!--    <style>-->
-<!--        .container {-->
-<!--            max-width: 560px;-->
-<!--        }-->
-<!--        .field-error {-->
-<!--            border-color: #dc3545;-->
-<!--            color: #dc3545;-->
-<!--        }-->
-<!--    </style>-->
-<!--</head>-->
+    <style>
+        .container {
+            max-width: 560px;
+        }
+    </style>
+</head>
 
-<!--<body>-->
-<!--<div class="container">-->
-<!--    <div class="py-5 text-center">-->
-<!--        <h2>게시물 수정</h2>-->
-<!--    </div>-->
+<body>
+<div class="container">
+    <div class="py-5 text-center">
+        <h2>게시물 수정</h2>
+    </div>
 
-<!--    <h2 th:if="${param.status}" th:text="'수정 완료!'"></h2>-->
+    <h2 th:if="${param.status}" th:text="'수정 완료!'"></h2>
 
-<!--    <form action="/posts/edit" th:action method="post" th:object="${form}">-->
-<!--        <div th:if="${#fields.hasGlobalErrors()}">-->
-<!--            <p class="field-error"-->
-<!--               th:each="err : ${#fields.globalErrors()}"-->
-<!--               th:text="${err}">전체 오류 메시지-->
-<!--            </p>-->
-<!--        </div>-->
+    <form action="/posts/edit" th:action method="post" th:object="${form}">
+        <div>
+            <label th:for="postTitle">제목</label>
+            <input type="text" th:field="*{postTitle}"
+                   class="form-control" placeholder="제목을 입력하세요">
+        </div>
 
-<!--        <div>-->
-<!--            <label for="postTitle">제목</label>-->
-<!--            <input type="text" id="postTitle" th:field="*{postTitle}"-->
-<!--                   class="form-control" th:errorclass="field-error">-->
-<!--            <div class="field-error" th:errors="*{postTitle}" />-->
-<!--        </div>-->
+        <div>
+            <label th:for="postContent">내용</label>
+            <input type="text" th:field="*{postContent}"
+                   class="form-control" placeholder="내용을 입력하세요">
+        </div>
 
-<!--        <div>-->
-<!--            <label for="postContent">내용</label>-->
-<!--            <input type="text" id="postContent" th:field="*{postContent}"-->
-<!--                   class="form-control" th:errorclass="field-error">-->
-<!--            <div class="field-error" th:errors="*{postContent}" />-->
-<!--        </div>-->
-
-<!--        <hr class="my-4">-->
-<!--        <div class="row">-->
-<!--            <div class="col">-->
-<!--                <button class="w-100 btn btn-primary btn-lg"-->
-<!--                        th:onclick="|location.href='@{/posts/detail}'|"-->
-<!--                        type="submit">등록</button>-->
-<!--            </div>-->
+        <hr class="my-4">
+        <div class="row">
+            <div class="col">
+                <button class="w-100 btn btn-primary btn-lg"
+                        th:onclick="|location.href='@{/posts/detail}'|"
+                        type="submit">Submit</button>
+            </div>
 
 <!--            <div class="col">-->
 <!--                <button class="w-100 btn btn-secondary btn-lg"-->
 <!--                        th:onclick="|location.href='@{/}'|"-->
-<!--                        type="button">취소</button>-->
+<!--                        type="button">홈으로</button>-->
 <!--            </div>-->
-<!--        </div>-->
-<!--    </form>-->
-<!--</div>-->
-<!--</body>-->
-<!--</html>-->
+        </div>
+    </form>
+</div>
+</body>
+</html>
